<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_signup_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorPrimary"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/generic_register" />

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:tint="@color/colorAccent"
        app:srcCompat="@drawable/ic_account" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:hint="@string/generic_username">

        <EditText
            android:id="@+id/activity_signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="72dp"
        android:hint="@string/generic_email">

        <EditText
            android:id="@+id/activity_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:lines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="72dp"
        android:hint="@string/generic_password"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/activity_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/activity_signup_signup"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="8dp"
        android:text="@string/generic_signup" />
</LinearLayout>